# VSIM-EXAM-2025

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/Scripts/: test.lua
Core/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
Core/Utility/: BblHub.h  Modeldata.h  Utilities.h  Vertex.h  gpuresourcemanager.cpp  gpuresourcemanager.h  modelloader.cpp  modelloader.h
ECS/: System.h  trackingsystemclass.cpp  trackingsystemclass.h
ECS/Components/: CollisionSystem.cpp  CollisionSystem.h  Components.h  Physics.cpp  Physics.h  trackingsystem.cpp  trackingsystem.h  trackingsystemclass.h
ECS/Entity/: Entity.h  EntityManager.cpp  EntityManager.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Editor/: MainWindow.cpp  MainWindow.h  MainWindow.ui
Game/: GameWorld.cpp  GameWorld.h  Terrain.cpp  Terrain.h
LAS data og Python script/: importlas.py  lasdata1.laz  lasdata3.laz  lasdata4.laz
Scenes/: MyScene.scene  PhongTesting.scene  Static_Objects.scene  pointcloud.scene  pointcloudtriangulated_with_phong.scene
Scripting/: luamanager.cpp  luamanager.h
Shaders/: CompileShaders.bat  Phong.frag  Phong.vert  Shader.vert  phong.frag.spv  phong.vert.spv  vert.spv
Soundsystem/: resourcemanager.cpp  resourcemanager.h
Triangulering og OBJ/: VISUAL STUDIO Oppgave 1.3 - Regular triangulering.txt  VISUAL STUDIO las data til OBJ fil.txt
Triangulering og OBJ script/: VISUAL STUDIO Oppgave 1.3 - Regulær triangulering.txt
